2010-05-17  vadim  <vadim@vk.crocodile.org>

	* RuleSetViewDelegate.cpp (RuleSetViewDelegate::paintOptions):
	fixed #1460 "when "show icons in rules" is turned off, there is no
	way to tell when logging is turned on and non-default options are
	present in a rule".

	* fixed #1339 "Logging" icon appears looking the same as "Rule
	options" icon on Mac

2010-05-15  Vadim Kurland  <vadim@vk.crocodile.org>

	* linux24Interfaces.cpp (linux24Interfaces::basicValidateInterfaceName):
	fixed #1458 Should permit interface name "br-lan" for bridge interface
	on Linux. Bridge interfaces on Linux can have any name, including those
	with "-". OpenWRT creates bridge interface with the name "br-lan" by
	default.

2010-05-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* update_addresses: fixed #1455 Function update_addresses() (host
	OS linux24 and derivatives) uses both ip and ifconfig. Should stick
	with /sbin/ip so the script works on systems where ifconfig is
	not installed.

2010-05-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObjectDropArea.cpp (FWObjectDropArea::editObject): fixed #1452
	double click on a rule set in the branch action dialog should open
	it in rule set view

	* iptables.g (MATCH_RECENT_SET): see #1451 "policy importer should
	support some popular iptables modules". Added support for module
	"recent" and rules that match standard ip/icmp/udp/tcp protocols
	and at the same time module "mark", "length", "limit" or "recent".
	Rules like these are translated into a combination of a branching
	rule and additional rule in a branch rule set that implements
	module match.

	* iptables.g (multiport_tcp_udp_port_spec): fixes #1453 "iptables
	importer should parse multiport module parameter --ports". Module
	multuport with parameter "--ports" matches either source or
	destination port numbers. Importer creates two tcp (or udp)
	service objects to implement this match.

	* IPTImporter.cpp (IPTImporter::addSrv): See #1450, SourceForge